--- a/index.html
+++ b/index.html
@@ -13,30 +13,47 @@
       crossorigin="anonymous"
     />
     <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js"
+      integrity="sha512-u9akINsQsAkG9xjc1cnGF4zw5TFDwkxuc9vUp5dltDWYCSmyd0meygbvgXrlc/z7/o4a19Fb5V0OUE58J7dcyw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
       integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
       crossorigin="anonymous"
     ></script>
+  </head>
+  <body class="container">
+    <h1>Star Wars API</h1>
+    <header class="text-center pt-5"></header>
+
+    <div id="buttons" class="text-center mb-5">      
+        <label class="btn btn-lg btn-outline-light">
+          <input
+            type="radio"
+            name="options"
+            id="people"
+            autocomplete="off"
+          />People
+        </label>
+      </div>
+    </div>
+
+    <div id="results" class="card-columns"></div>
+
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-  </head>
-  <body>
-    <div>
-      <div class="card" style="width: 18rem">
-        <div class="card-body">
-          <h5 id="person-info">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <a href="#" class="btn btn-primary">More Info</a>
-        </div>
-      </div>
-      <!-- <div id="person-info"></div> -->
-    </div>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"
+      integrity="sha512-2rNj2KJ+D8s1ceNasTIex6z4HWyOnEYLVC3FigGOmyQCZc2eBXKgOxQmo3oKLHyfcj53uz4QMsRCWNbLd32Q1g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="scripts/main.js"></script>
   </body>
 </html>
