Clean up code and reconfigure to display first 10 people without clicking button

--- a/index.html
+++ b/index.html
@@ -24,23 +24,9 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body class="container">
+  <body>
     <h1>Star Wars API</h1>
-    <header class="text-center pt-5"></header>
-
-    <div id="buttons" class="text-center mb-5">      
-        <label class="btn btn-lg btn-outline-light">
-          <input
-            type="radio"
-            name="options"
-            id="people"
-            autocomplete="off"
-          />People
-        </label>
-      </div>
-    </div>
-
-    <div id="results" class="card-columns"></div>
+    <div id="app"></div>
 
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
