Add loading indicator to display when communicating with API

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
   </head>
   <body>
     <h1>Star Wars API</h1>
+
+    <!-- Boostrap spinner while connecting with API -->
+    <div class="d-flex justify-content-center">
+      <div class="spinner-border" role="status">
+        <span class="sr-only"></span>
+      </div>
+    </div>
     <div id="app"></div>
 
     <script
