--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
         <span class="sr-only"></span>
       </div>
     </div>
-    <div id="app"></div>
+
+    <div class="container">
+      <div class="row">
+        <div id="app"></div>
+      </div>
+    </div>
 
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
